<resources>
    <string name="app_name">LBL TakeFive</string>
    <string name="powerd_by_pupalinks_lab">Powerd by Anantdv</string>
    <string name="employee_details">Employee Details</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="employee_no">Employee no</string>
    <string name="job_location">Job Location</string>
    <string name="date">Date</string>
    <string name="job_description">Job Description</string>
    <string name="employee">Employee</string>
    <string name="i_am_fit_for_work_today">I am \'fit for work\' today ?</string>
    <string name="yes">Yes</string>
    <string name="i_have_reported_a_no_answer_to_my_supervisor">(I have reported a no answer to my supervisor)</string>
    <string name="no">No</string>
    <string name="competency">COMPETENCY</string>
    <string name="employee_caps">EMPLOYEE</string>
    <string name="am_i_trained_and_competent_for_this_work">Am I trained and competent for this work</string>
    <string name="am_i_authorized_to_this_work">Am I authorized to this work</string>
    <string name="tools_and_equipment">TOOLS AND EQUIPMENT</string>
    <string name="i_have_the_correct_tools_for_this_task">I have the correct tools for this task</string>
    <string name="i_have_checked_my_tools_are_in_good_condition">I have checked my tools are in good condition</string>
    <string name="i_have_been_trained_to_use_my_tools_safetly">I have been trained to use my tools safetly</string>
    <string name="risk_or_hazard">RISK OR HAZARD</string>
    <string name="identify_and_list_three_risks_and_hazards">Identify and list three risks and hazards</string>
    <string name="enter_here">Enter here</string>
    <string name="list_three_control_measures_for_the_identified_hazards">List three control measures for the identified hazards</string>
    <string name="additional_condition">ADDITIONAL CONDITION</string>
    <string name="i_need_a_jsa">I need a JSA</string>
    <string name="permit_for_this_task">Permit for this task</string>
    <string name="i_have_reviewed_the_jsa_swp_permit_s_and_it_n_has_been_approved_by_my_supervisor">I have reviewed the JSA/SWP/Permit(s) and it has been Approved by my supervisor ?</string>
    <string name="wp">WP</string>
    <string name="save">SAVE</string>
    <string name="i_have_the_jsa_swp_permit_s_at_the_workplace">I have the JSA/SWP/Permit(s) at the workplace ?</string>
    <string name="data_added_successfully">Data added successfully</string>
    <string name="add_new">Add new</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="take_five">Take Five</string>
</resources>
