<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Takefivepage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#131557">

        <TextView
            android:id="@+id/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_details"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_below="@+id/employee"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            app:civ_border_width="2dp"
            android:src="@drawable/employee"
            app:civ_border_color="#FF000000"/>

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:layout_gravity="bottom">
            <EditText
                android:id="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:paddingLeft="7dp"
                android:singleLine="true"
                android:background="@drawable/edittextback"/>
             <EditText
                 android:id="@+id/employee_no"
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/employee_no"
                 android:paddingLeft="5dp"
                 android:singleLine="true"
                 android:background="@drawable/edittextback"/>
            <LinearLayout
                android:id="@+id/date"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/employee_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:background="@drawable/edittextback"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/date_picker"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:background="@drawable/date"
                    android:textColor="#fff"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/seleted_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="Tap the button"
                    android:textSize="20sp"/>

            </LinearLayout>
            <EditText
                android:id="@+id/job_location"
                android:layout_marginTop="10dp"
                android:hint="@string/job_location"
                android:paddingLeft="5dp"
                android:layout_below="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:background="@drawable/edittextback"/>
            <EditText
                android:id="@+id/job_decs"
                android:layout_marginTop="10dp"
                android:hint="@string/job_description"
                android:paddingLeft="5dp"
                android:layout_below="@+id/job_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:background="@drawable/edittextback"/>

            <Button
                android:id="@+id/next"
                android:layout_below="@+id/job_decs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/next"
                android:textColor="#fff"
                android:background="#131556"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>